# 04_mcp_client

./: client.py  data.txt  hello.py  main.py  outfile.txt  pyproject.toml  server.py  server1.py  text.py
