[project]
name = "05-mcp-resource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.12.4",
    "mcp-server>=0.1.4",
    "openai-agents>=0.2.5",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
